# NetherSX2_nx

./: .gitignore  Makefile  README.md  build_all.sh
launcher/: Makefile
launcher/dependencies/: CMakeLists.txt
launcher/fwd/: Makefile  main.c  trampoline.s
launcher/source/: forwarder.cpp  forwarder.h  forwarder_structs.h  griddb.cpp  griddb.h  main.cpp  ui_audio.cpp  ui_audio.h
source/: aaudio.c  aaudio.h  cert_data.h  config.c  config.h  crash.c  dl_emu.c  dl_emu.h  egl_vk_stubs.c  error.c  exc_entry.s  filehelper.c  filehelper.h  hooks.h  imports.c  imports.h  jni_fake.c  jni_fake.h  keycodes.h  libc_shim.c  libc_shim.h  main.c  prefs.c  prefs.h  pthr.c  pthr.h  so_util.c  so_util.h  syslang.c  syslang.h  util.c  util.h
source/hooks/: egl.c  patches.c  vk.c  vk.h
source/switch/: SwitchPosixCompat.cpp  SwitchStorage.cpp  SwitchStorage.h  SwitchStorageBridge.cpp  SwitchStorageBridge.h
